Comitting tonight's progress.

--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
 
 <body>
 	<header>
-		<img src="images/Logo.png">
+		<img src="images/logo.png">
 	</header>
 	
 	<nav> 
 		<ul>
-			<li class="navlistitem"> <a href ="index.html">Home</a></li>
-			<li class="navlistitem"> <a href ="consoles.html">Consoles</a></li>
-			<li class="navlistitem"> <a href ="addons.html">Addons</a></li>
-			<li class="navlistitem"> <a href ="emulation.html">Emulation</a></li>
+			<li class="navlistitem"> <a href ="index.html">HOME</a></li>
+			<li class="navlistitem"> <a href ="consoles.html">CONSOLES</a></li>
+			<li class="navlistitem"> <a href ="addons.html">ADDONS</a></li>
+			<li class="navlistitem"> <a href ="emulation.html">EMULATION</a></li>
 		</ul>
 	</nav>
 	
 	<main>
 		<h3>What are "retro video games"?</h3>
-		<p>This is mainly where I plan on displaying my information about specific consoles.<p>	
+		<p>Retro video games are games from an era long passed. Back when Nintendo was a juggernaut, SEGA was vying for that number one spot, and when Playstation wasn't number one. It was a much simpler time, with way simpler games.<p>	
 		<img src="images/DummyImage.jpg">
 	</main>
 
