--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
 			<li class="navlistitem"> <a href ="consoles.html">CONSOLES</a></li>
 			<li class="navlistitem"> <a href ="addons.html">ADDONS</a></li>
 			<li class="navlistitem"> <a href ="emulation.html">EMULATION</a></li>
+			<li class="navlistitem"> <a href ="about.html">ABOUT</a></li>
 		</ul>
 	</nav>
 	
 	<main>
 		<h3>What are "retro video games"?</h3>
-		<p>Retro video games are games from an era long passed. Back when Nintendo was a juggernaut, SEGA was vying for that number one spot, and when Playstation wasn't number one. It was a much simpler time, with way simpler games.<p>	
-		<img src="images/DummyImage.jpg">
+		<p>Retro video games are games from an era long passed. Back when Nintendo was a juggernaut, SEGA was vying for that number one spot, and when Playstation wasn't number one. It was a much simpler time, with way simpler games. Retro video games come from a time when it was one and done; there was no day one patch or microtransactions. You released the game and it was out there.<p>	
+		<p>My website aims to chronicle retro gaming and act as sort of a document for others to reference if need be. I aim to document everything to the best of my ability. If you would like to contact me, my Discord tag is Sandvich Thief#0179, and I would be glad to talk about any sort of ammendments or updates you think could be implemented.</p>
 	</main>
 
 	<footer> <h5> © 2022 Sandvich Thief. All displayed properties belong to their respective owners.</h5> </footer>
