--- a/about.html
+++ b/about.html
@@ -1,22 +1,22 @@
 <!DOCTYPE HTML>
 
 <link href="layout.css" rel="stylesheet" type="text/css">
+<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 
 <head>
 	<meta charset="utf-8">
-	<title>Home | Retro Gaming Central</title>
+	<title>About | Retro Gaming Central</title>
 </head>
 
 <body>
 	<header>
-		<img src="images/logo.png">
+		<img src="images/logos/sitelogo.png">
 	</header>
 	
 	<nav> 
 		<ul>
 			<li class="navlistitem"> <a href ="index.html">HOME</a></li>
 			<li class="navlistitem"> <a href ="consoles.html">CONSOLES</a></li>
-			<li class="navlistitem"> <a href ="addons.html">ADDONS</a></li>
 			<li class="navlistitem"> <a href ="emulation.html">EMULATION</a></li>
 			<li class="navlistitem"> <a href ="about.html">ABOUT</a></li>
 		</ul>
@@ -27,6 +27,7 @@
 		<p>I'm from Eastern Australia, where I enjoy retro gaming. I may not have the biggest collection, but my passion for it is fairly strong. Retro gaming has intrigued me since I was a young child and one day I wish to have a good collection.<p>
 		<img src="images/sandpfp.png" style="width:250px;height:250px;">
 		<p>My favourite systems are the Super Nintendo Entertainment System (SNES), and the Sega Mega Drive (SMD). Nintendo and Sega have interested me the most, with the Xbox and Playstation also providing some intrigue for me as well. One day I wish to have these systems and much more.<p>
+		<p>If you would like to contact me, my Discord tag is Sandvich Thief#0179, and I would be glad to talk about any sort of ammendments or updates you think could be implemented.</p>
 	</main>
 
 	<footer> <h5> © 2022 Sandvich Thief. All displayed properties belong to their respective owners.</h5> </footer>
