--- a/consoles.html
+++ b/consoles.html
@@ -1,22 +1,22 @@
 <!DOCTYPE HTML>
 
 <link href="layout.css" rel="stylesheet" type="text/css">
+<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 
 <head>
 	<meta charset="utf-8">
-	<title>Home | Retro Gaming Central</title>
+	<title>Consoles | Retro Gaming Central</title>
 </head>
 
 <body>
 	<header>
-		<img src="images/logo.png">
+		<img src="images/logos/sitelogo.png">
 	</header>
 	
 	<nav> 
 		<ul>
 			<li class="navlistitem"> <a href ="index.html">HOME</a></li>
 			<li class="navlistitem"> <a href ="consoles.html">CONSOLES</a></li>
-			<li class="navlistitem"> <a href ="addons.html">ADDONS</a></li>
 			<li class="navlistitem"> <a href ="emulation.html">EMULATION</a></li>
 			<li class="navlistitem"> <a href ="about.html">ABOUT</a></li>
 		</ul>
@@ -27,9 +27,28 @@
 		<p>This is a list of retro consoles from various eras. Feel free to look at these and reference them for information. For simplification, I'm not including any Atari consoles, or anything that was a commercial and/or critical failure (read: N-Gage or game.com) purely because I don't think having articles about them would be interesting or worthwhile.<p>	
 		<p>TL;DR: I'm only doing the "Big Four".</p>
 		<h3>Nintendo</h3>
+		    <a href="nintendo/nes.html">
+			<img align="left" src="images/logos/nintendo/neslogo.png" style="width:300px;height:125px;">
+			</a>
+			<a href="nintendo/snes.html">
+			<img align="left" src="images/logos/nintendo/sneslogo.png" style="width:320px;height:115px;">
+			</a>
+			<a href="nintendo/n64.html">
+			<img align="left" src="images/logos/nintendo/n64logo.png" style="width:330px;height:65px;">
+			</a>
+			<a href="nintendo/gcn.html">
+			<img align="left" src="images/logos/nintendo/gcnlogo.png" style="width:300px;height:90px;">
+			</a>
+			<a href="nintendo/wii.html">
+			<img align="left" src="images/logos/nintendo/wiilogo.png" style="width:300px;height:125px;">
+			</a>
 		<h3>Sega</h3>
 		<h3>Sony</h3>
 		<h3>Microsoft</h3>
+		
+		<h2>A List of Retro Handhelds</h2>
+		<p>Here's another list. This time, it's handhelds.<p>	
+		<h3>Nintendo</h3>
 	</main>
 
 	<footer> <h5> © 2022 Sandvich Thief. All displayed properties belong to their respective owners.</h5> </footer>
