--- a/emulation.html
+++ b/emulation.html
@@ -6,7 +6,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Home | Retro Gaming Central</title>
+	<title>Emulation | Retro Gaming Central</title>
 </head>
 
 <body>
@@ -24,9 +24,8 @@
 	</nav>
 	
 	<main>
-		<h3>What are "retro video games"?</h3>
-		<p>Retro video games are games from an era long passed. Back when Nintendo was a juggernaut, SEGA was vying for that number one spot, and when Playstation wasn't number one. It was a much simpler time, with way simpler games. Retro video games come from a time when it was one and done; there was no day one patch or microtransactions. You released the game and it was out there.<p>	
-		<p>My website aims to chronicle retro gaming and act as sort of a document for others to reference if need be. I aim to document everything to the best of my ability.</p>
+		<h3>Emulating Retro Video Games</h3>
+		<p>dummy text<p>
 	</main>
 
 	<footer> <h5> © 2022 Sandvich Thief. All displayed properties belong to their respective owners.</h5> </footer>
