Committed current progress

--- a/emulation.html
+++ b/emulation.html
@@ -25,7 +25,9 @@
 	
 	<main>
 		<h3>Emulating Retro Video Games</h3>
-		<p>dummy text<p>
+		<p>If one cannot acquire a proper retro game console, emulation is usually the next best alternative.<p>
+		<h3>Choosing an emulator</h3>
+		<p>There's so many choices for emulators nowadays that it's hard to choose.</p>
 	</main>
 
 	<footer> <h5> © 2022 Sandvich Thief. All displayed properties belong to their respective owners.</h5> </footer>
