--- a/nintendo/nes.html
+++ b/nintendo/nes.html
@@ -25,6 +25,8 @@
 	
 	<main>
 		<h2>The Nintendo Entertainment System</h2>
+		<p>Personal Favourites: Super Mario Bros, Super Mario Bros. 2/Super Mario USA, The Legend of Zelda, Super Mario Bros. 3</p>
+		<p>Personal Worst: Super Mario Bros: The Lost Levels</p>
 		<h3>Development of the Nintendo Famicom</h3>
 		<p>In 1982, Nintendo of Japan were in the planning phase of a new system, which they initially dubbed the "GameCom", standing for "Game Computer". However, after system designer Masayuki Uemura's wife proposed the name "Famicom", standing for "Family Computer", the team switched the name, as it sounded more appealing for a family. The initial plan for the system was to use a 16-bit chipset with a keyboard and floppy disk drive, aiming to act more like a personal computer, however the current president of Nintendo, the late Hiroshi Yamauchi, vetoed this idea, as it would've been too expensive. So instead, they elected to use an 8-bit chipset with cartridge-based games.<p>
 		<p>One of the main inspirations for the Famicom was the Colecovision, which had great graphics (for the time) and had a port of Donkey Kong, which looked and sounded very faithful to the original. However, despite being impressed with it, Nintendo wanted to surpass the Colecovision. As such, they took Donkey Kong's arcade cabinet to Ricoh, where they analysed it and created the Famicom's picture processing unit (PPU) The console additionally had it's controllers hardwired in for budgetary reasons. Initially, joysticks were planned to be used, however, they switched over to Gunpei Yokoi's D-pad after discussing comfort and safety for their target audience. However, they compromised and included a 15-pin port on the system's front, for additional controllers and accessories.</p>
@@ -39,8 +41,35 @@
 		<p>The NES saw a limited test market release in October of 1985, with the system faring well in these markets. In February of 1986, the system was released in Los Angeles, with the system released across the whole of the US in September of 1986. The system was released in Europe via several companies, who localised the system and released it across 1986 and 1987. Mattel handled distribution for the UK, Ireland, Italy, Australia and New Zealand, where these regions saw releases in 1987. Several Asian countries recieved the system as a "Asian Edition" NES, despite the existence of the Famicom in Japan. South Korea got the NES as the Comboy, distributed by Hyundai Electronics (no relation to the car company), because of cultural disputes between Japan and South Korea. The system was sold in India by Samurai, however due to Indian legislation preventing the import of electronics at the time, it was assembled locally via parts kits.</p>
 		<p>Nintendo officially supported the system until August 1995, where they stopped selling it, however they provided repairs for the system until December 1996.</p>
 		<h3>The Famicom Disk System</h3>
-		<p></p>
-	</main>
+		<p>Nintendo was pleased with the Famicom's sales in Japan, however there were shortages in chips and semiconductors. Additionally, these compontents increased the price of the games, so they decided to solve these problems with an addon for the system. The Famicom Disk System was conceptualised to be a more cost-effective way of purchasing games, and as such, used modified Quick Disks. Additionally, Nintendo set up Disk Writer Kiosks in electronics stores and toy stores around Japan.</p>
+		<p>While the Famicom Disk System was a success, as it sold 4 million units, it was a very short lived one, as by 1988, the system was rendered obsolete by expanded chipsets, which allowed developers to develop more complex games for the standard Famicom. Ironically, this allowed Disk System games to be ported to the NES for international releases, such as The Legend of Zelda, Metroid, Castlevania, Kid Icarus and Zelda 2. The last game for the system was released in 1992, the system itself was discontinued alongside the NES in 2003, and support was dropped in 2007.</p>
+		<p>Nintendo would revisit distributable games with the Satellaview in 1995, and the disk format itself would be revisited briefly in 1999 with the Nintendo 64 Disk Drive.</p>
+		<h3>Legacy</h3>
+		<p>The Nintendo Entertainment System/Famicom was a revolutionary system, making gaming even more accessible for families and individuals alike. It allowed developers to create experiences that hadn't been imaginable 5 years before. The system was insanely popular, selling nearly 62 million units worldwide. It crushed it's "rival", the Sega Master System by a factor of 3 NES systems to 1 Master System.</p>
+		<p>The NES had cultivated a library of cult classics, such as The Legend of Zelda, Kirby's Adventure, Duck Hunt, Tetris, Castlevania, Metroid, Kid Icarus, and of course, Super Mario Bros. With most of these series still on-going today, it's safe to say that Nintendo will be able to keep producing these games long into the future.</p>
+		<h3>Console Gallery</h3>
+		<p>The original Famicom, HVC-001, released in July 1983</p>
+		<img src="images/famicom.png" style="width:350px;height:280px;">
+		<p>The original Nintendo Entertainment System, NES-001, released in October 1985</p>
+		<img src="images/nes.png" style="width:350px;height:250px;">
+		<p>The Famicom Disk System, HVC-022, released in February 1986</p>
+		<img src="images/famicomdisk.png" style="width:350px;height:280px;">
+		<p>The Twin Famicom, AN-500-B, released in July 1986</p>
+		<img src="images/twinfamicom.png" style="width:400px;height:215px;">
+		<p>The New-Style NES, NES-101, released in October 1993</p>
+		<img src="images/newstylenes.png" style="width:400px;height:215px;">
+		<p>The AV-Famicom, HVC-101, released in December 1993</p>
+		<img src="images/avfamicom.png" style="width:350px;height:280px;">
+		<h3>Games Gallery (Gameplay captured with FCEUX)</h3>
+		<p>Super Mario Bros.</p>
+		<img src="images/nes-games/supermariobros.png">
+		<p>Super Mario Bros. 2 (JP)/Super Mario Bros.: The Lost Levels (Int.)</p>
+		<img src="images/nes-games/supermariobros2.png">
+		<p>Super Mario Bros. 3</p>
+		<img src="images/nes-games/supermariobros3.png">
+		<p>Super Mario Bros. 2 (World)/Super Mario USA (Jp.)</p>
+		<img src="images/nes-games/supermariousa.png">
+		</main>
 
 	<footer> <h5> © 2022 Sandvich Thief. All displayed properties belong to their respective owners.</h5> </footer>
 </body>
