--- a/consoles.html
+++ b/consoles.html
@@ -31,7 +31,7 @@
 			<img align="left" src="images/logos/nintendo/neslogo.png" style="width:300px;height:125px;">
 			</a>
 			<a href="nintendo/snes.html">
-			<img align="left" src="images/logos/nintendo/sneslogo.png" style="width:320px;height:115px;">
+			<img align="left" src="images/logos/nintendo/sneslogo.png" style="width:320px;height:100px;">
 			</a>
 			<a href="nintendo/n64.html">
 			<img align="left" src="images/logos/nintendo/n64logo.png" style="width:330px;height:65px;">
@@ -43,9 +43,35 @@
 			<img align="left" src="images/logos/nintendo/wiilogo.png" style="width:300px;height:125px;">
 			</a>
 		<h3>Sega</h3>
+			<a href="sega/mastersystem.html">
+			<img align="left" src="images/logos/nintendo/neslogo.png" style="width:300px;height:125px;">
+			</a>
+			<a href="sega/megadrive.html">
+			<img align="left" src="images/logos/nintendo/sneslogo.png" style="width:320px;height:100px;">
+			</a>
+			<a href="sega/saturn.html">
+			<img align="left" src="images/logos/nintendo/n64logo.png" style="width:330px;height:65px;">
+			</a>
+			<a href="sega/dreamcast.html">
+			<img align="left" src="images/logos/nintendo/gcnlogo.png" style="width:300px;height:90px;">
+			</a>
 		<h3>Sony</h3>
+			<a href="sony/playstation.html">
+			<img align="left" src="images/logos/nintendo/n64logo.png" style="width:330px;height:65px;">
+			</a>
+			<a href="sony/playstation2.html">
+			<img align="left" src="images/logos/nintendo/gcnlogo.png" style="width:300px;height:90px;">
+			</a>
+			<a href="sony/playstation3.html">
+			<img align="left" src="images/logos/nintendo/wiilogo.png" style="width:300px;height:90px;">
+			</a>
 		<h3>Microsoft</h3>
-		
+			<a href="microsoft/xbox.html">
+			<img align="left" src="images/logos/nintendo/gcnlogo.png" style="width:300px;height:90px;">
+			</a>
+			<a href="microsoft/xbox360.html">
+			<img align="left" src="images/logos/nintendo/wiilogo.png" style="width:300px;height:90px;">
+			</a>
 		<h2>A List of Retro Handhelds</h2>
 		<p>Here's another list. This time, it's handhelds.<p>	
 		<h3>Nintendo</h3>
