--- a/emulation.html
+++ b/emulation.html
@@ -24,10 +24,28 @@
 	</nav>
 	
 	<main>
-		<h3>Emulating Retro Video Games</h3>
-		<p>If one cannot acquire a proper retro game console, emulation is usually the next best alternative.<p>
+		<h2>Emulating Retro Video Games</h2>
+		<p>If one cannot acquire a proper retro game console, emulation is usually the next best alternative. Emulators are usually convenient to install and are usually the best way to play a game, asides from the real deal. I personally support emulation, because it can aid with video game preservation, despite what others want you to think. Yes, they can be used to play pirated or bootlegged games, but what can you do about it? If you dump your own games, more power to ya!<p>
 		<h3>Choosing an emulator</h3>
-		<p>There's so many choices for emulators nowadays that it's hard to choose.</p>
+		<p>There's so many choices for emulators nowadays that it's hard to choose. However, I'm glad to help with choosing emulators.</p>
+		<h3>Nintendo</h3>
+		<p>Starting with Nintendo's systems, from experience, the best emulators are Mesen and FCEUX. They're both highly customisable and very accurate to the real deal. Some of the most fun I've had with Famicom games.</p>
+		<button><a href="https://mesen.ca/">Get Mesen here!</a></button>
+		<button><a href="https://fceux.com/web/home.html">Get FCEUX here!</a></button>
+		<p>Jumping to the SNES, higan/bsnes are excellent emulators (being forks of each other) and arguably the gold standards for SNES emulation. Hell, bsnes even has Satellaview support to an extent! What's not to like? SNES9x, whilst not being the most up-to-date, is also a really good emulator, being the top SNES emulator before higan.</p>
+		<button><a href="https://www.snes9x.com/">Get SNES9x here!</a></button>
+		<button><a href="https://bsnes.dev/">Get bsnes here!</a></button>
+		<p>Taking a massive step down from SNES emulation, N64 emulation is kind of like hitting a bum chord. Complete compatibility and accuracy leave a bit to be desired, especially considering it's two immediate predecessors and successors respectively have outstanding emulation options available. Your best choices are Project64 and Mupen64Plus, however both have caveats. Mupen has no GUI built into it, requiring the installation of a GUI, which isn't the easiest for beginners. Project64 is easier to install, but contains nagware, begging the user to donate on every launch. Still, they're your best two options, for better or for worse. Personally I recommend Mupen, as it is a better emulator, albeit less user friendly.</p>
+		<button><a href="https://www.pj64-emu.com/">Get Project64 here.</a></button>
+		<button><a href="https://m64p.github.io/">Get Mupen64Plus here!</a></button>
+		<p>Moving on, we have arguably one of the best emulators ever, Dolphin. Not only does this emulator have Gamecube support, but it also supports the Wii as they are both based on very similar hardware. Dolphin has support for the Gamecube, Wii, Wiiware and Wii Virtual Console, and it's usable with real controllers, if you can get them connected. Pick this one up ASAP!</p>
+		<button><a href="https://dolphin-emu.org/">Get Dolphin here!</a></button>
+		<h3>Acquiring ROM and BIOS images</h3>
+		<p>ROM images are mandatory in an emulator, as they are the actual games themselves. Some emulators do not require BIOSes (either because they're optional or the system being emulated didn't have a BIOS), however most emulators for modern systems require a BIOS dump, as well as the games themselves.</p>
+		<h3>Sandvich's Word of Transparency </h3>
+		<p>Now I'm going to be transparent and say that I am not responsible for any viruses, malware, spyware you acquire when installing and emulating retro games. As a wise man once said, "Fuck around and find out." It is also worth noting that if an emulator appears too good to be true (i.e. for a recently released system, like the PS5 or Xbox Series X), then it's most likely not true. Do your research when installing emulators.</p>
+		<p>If you want more information on emulation, visit the Emulation General Wiki.</p>
+		<button><a href="https://emulation.gametechwiki.com/index.php/Main_Page">To the EGW!</a></button>
 	</main>
 
 	<footer> <h5> © 2022 Sandvich Thief. All displayed properties belong to their respective owners.</h5> </footer>
