--- a/nintendo/nes.html
+++ b/nintendo/nes.html
@@ -47,6 +47,7 @@
 		<h3>Legacy</h3>
 		<p>The Nintendo Entertainment System/Famicom was a revolutionary system, making gaming even more accessible for families and individuals alike. It allowed developers to create experiences that hadn't been imaginable 5 years before. The system was insanely popular, selling nearly 62 million units worldwide. It crushed it's "rival", the Sega Master System by a factor of 3 NES systems to 1 Master System.</p>
 		<p>The NES had cultivated a library of cult classics, such as The Legend of Zelda, Kirby's Adventure, Duck Hunt, Tetris, Castlevania, Metroid, Kid Icarus, and of course, Super Mario Bros. With most of these series still on-going today, it's safe to say that Nintendo will be able to keep producing these games long into the future.</p>
+		
 		<h3>Console Gallery</h3>
 		<p>The original Famicom, HVC-001, released in July 1983</p>
 		<img src="images/famicom.png" style="width:350px;height:280px;">
@@ -60,6 +61,7 @@
 		<img src="images/newstylenes.png" style="width:400px;height:215px;">
 		<p>The AV-Famicom, HVC-101, released in December 1993</p>
 		<img src="images/avfamicom.png" style="width:350px;height:280px;">
+		
 		<h3>Games Gallery (Gameplay captured with FCEUX)</h3>
 		<p>Super Mario Bros.</p>
 		<img src="images/nes-games/supermariobros.png">
@@ -69,6 +71,8 @@
 		<img src="images/nes-games/supermariobros3.png">
 		<p>Super Mario Bros. 2 (World)/Super Mario USA (Jp.)</p>
 		<img src="images/nes-games/supermariousa.png">
+		<p>The Legend of Zelda</p>
+		<img src="images/nes-games/legendofzelda.png">
 		</main>
 
 	<footer> <h5> © 2022 Sandvich Thief. All displayed properties belong to their respective owners.</h5> </footer>
