Updating what I've got.

--- a/consoles.html
+++ b/consoles.html
@@ -24,8 +24,7 @@
 	
 	<main>
 		<h2>A List of Retro Consoles</h2>
-		<p>This is a list of retro consoles from various eras. Feel free to look at these and reference them for information. For simplification, I'm not including any Atari consoles, or anything that was a commercial and/or critical failure (read: N-Gage or game.com) purely because I don't think having articles about them would be interesting or worthwhile.<p>	
-		<p>TL;DR: I'm only doing the "Big Four".</p>
+		<p>This is a list of retro consoles from various eras. I've chosen to only do the Big Four for now, as they are already time consuming enough as-is.<p>	
 		<h3>Nintendo</h3>
 		    <a href="nintendo/nes.html">
 			<img align="left" src="images/logos/nintendo/neslogo.png" style="width:300px;height:125px;">
@@ -34,7 +33,7 @@
 			<img align="left" src="images/logos/nintendo/sneslogo.png" style="width:320px;height:100px;">
 			</a>
 			<a href="nintendo/n64.html">
-			<img align="left" src="images/logos/nintendo/n64logo.png" style="width:330px;height:65px;">
+			<img align="left" src="images/logos/nintendo/n64logo.png" style="width:330px;height:55px;">
 			</a>
 			<a href="nintendo/gcn.html">
 			<img align="left" src="images/logos/nintendo/gcnlogo.png" style="width:300px;height:90px;">
@@ -50,14 +49,14 @@
 			<img align="left" src="images/logos/nintendo/sneslogo.png" style="width:320px;height:100px;">
 			</a>
 			<a href="sega/saturn.html">
-			<img align="left" src="images/logos/nintendo/n64logo.png" style="width:330px;height:65px;">
+			<img align="left" src="images/logos/nintendo/n64logo.png" style="width:330px;height:55px;">
 			</a>
 			<a href="sega/dreamcast.html">
 			<img align="left" src="images/logos/nintendo/gcnlogo.png" style="width:300px;height:90px;">
 			</a>
 		<h3>Sony</h3>
 			<a href="sony/playstation.html">
-			<img align="left" src="images/logos/nintendo/n64logo.png" style="width:330px;height:65px;">
+			<img align="left" src="images/logos/nintendo/n64logo.png" style="width:330px;height:55px;">
 			</a>
 			<a href="sony/playstation2.html">
 			<img align="left" src="images/logos/nintendo/gcnlogo.png" style="width:300px;height:90px;">
@@ -75,6 +74,9 @@
 		<h2>A List of Retro Handhelds</h2>
 		<p>Here's another list. This time, it's handhelds.<p>	
 		<h3>Nintendo</h3>
+		<note to self: gb, gbc, gba and ds>
+		<h3>Sega</h3>
+		<game gear and nomad>
 	</main>
 
 	<footer> <h5> © 2022 Sandvich Thief. All displayed properties belong to their respective owners.</h5> </footer>
