--- a/nintendo/nes.html
+++ b/nintendo/nes.html
@@ -25,6 +25,7 @@
 	
 	<main>
 		<h2>The Nintendo Entertainment System</h2>
+		<p>The Nintendo Entertainment System, also known as the Famicom/Family Computer in Japan, is Nintendo's first major home console. Released in 1983, it changed the way video games were made, with impacts lasting to this very day.</p>
 		<p>Personal Favourites: Super Mario Bros, Super Mario Bros. 2/Super Mario USA, The Legend of Zelda, Super Mario Bros. 3</p>
 		<p>Personal Worst: Super Mario Bros: The Lost Levels</p>
 		<h3>Development of the Nintendo Famicom</h3>
