--- a/nintendo/gcn.html
+++ b/nintendo/gcn.html
@@ -24,14 +24,16 @@
 	</nav>
 	
 	<main>
-		<h2>The Nintendo 64</h2>
+		<h2>The Nintendo Gamecube</h2>
 		<p>Personal Favourites: Luigi's Mansion, Super Mario Sunshine, Mario Kart Double Dash</p>
 		<p>Personal Worst: N/A</p>
-		<h3>Development of the Nintendo 64</h3>
+		<h3>Development of the Nintendo Gamecube</h3>
 		<p>dummy text</p>
-		<h3>Release of the Nintendo 64</h3>
+		<h3>Release of the Nintendo Gamecube</h3>
 		<p>dummy text</p>
-		<h3>The 64DD</h3>
+		<h3>The Panasonic Q</h3>
+		<p>dummy text</p>
+		<h3>The Game Boy Player</h3>
 		<p>dummy text</p>
 		<h3>Legacy</h3>
 		<p>dummy text</p>
@@ -45,15 +47,15 @@
 		<img src="images/n64dd.png" style="width:315px;height:275px;">
 		
 		<h3>Games Gallery (Gameplay captured with bsnes)</h3>
-		<p>Super Mario 64</p>
+		<p>Luigi's Mansion</p>
 		<img src="images/nes-games/supermariobros.png">
-		<p>Mario Kart 64</p>
+		<p>Super Mario Sunshine</p>
 		<img src="images/nes-games/supermariobros2.png">
-		<p>Ocarina of Time</p>
+		<p>Mario Kart: Double Dash</p>
 		<img src="images/nes-games/supermariobros3.png">
-		<p>GoldenEye</p>
+		<p>The Legend of Zelda: The Wind Waker</p>
 		<img src="images/nes-games/supermariousa.png">
-		<p>Donkey Kong 64</p>
+		<p>Animal Crossing</p>
 		<img src="images/nes-games/legendofzelda.png">
 		</main>
 
