--- a/nintendo/nes.html
+++ b/nintendo/nes.html
@@ -66,14 +66,16 @@
 		<h3>Games Gallery (Gameplay captured with FCEUX)</h3>
 		<p>Super Mario Bros.</p>
 		<img src="images/nes-games/supermariobros.png">
-		<p>Super Mario Bros. 2 (JP)/Super Mario Bros.: The Lost Levels (Int.)</p>
+		<p>Super Mario Bros. 2 (Japan)/Super Mario Bros.: The Lost Levels (Int.)</p>
 		<img src="images/nes-games/supermariobros2.png">
 		<p>Super Mario Bros. 3</p>
 		<img src="images/nes-games/supermariobros3.png">
-		<p>Super Mario Bros. 2 (World)/Super Mario USA (Jp.)</p>
+		<p>Super Mario Bros. 2 (World)/Super Mario USA (Japan)</p>
 		<img src="images/nes-games/supermariousa.png">
 		<p>The Legend of Zelda</p>
 		<img src="images/nes-games/legendofzelda.png">
+		<p>Metroid</p>
+		<img src="images/nes-games/metroid.png">
 		</main>
 
 	<footer> <h5> © 2022 Sandvich Thief. All displayed properties belong to their respective owners.</h5> </footer>
