--- a/nintendo/snes.html
+++ b/nintendo/snes.html
@@ -45,9 +45,10 @@
 		<p>Featuring an Earthbound-styled interface, and beloved Nintendo IPs, the Satellaview was moderately successful, having reached a peak userbase by mid-1997. However, tensions were growing between Nintendo and St.GIGA, as the latter had refused a debt management plan, meant to boost the failing company. Additionally having failed to acquire a broadcasting license (meaning that their past broadcasts violated the law), Nintendo severed ties with the company and left them in March 1999, where they were to manage the Satellaview alone.</p>
 		<p>They kept it up for 15 months more, and shut the service down at the end of June of 2000. Much of the system's content is unfortnately lost due to the temporary nature of broadcast media. St.GIGA folded in March 2003 to become Club Cosmo, where they shut down in October and had their material auctioned off.</p>
 		<h3>Nintendo Power</h3>
-		<p>dummy text</p>
+		<p>Before we go on, it needs to be said that this is not to be confused with the American magazine and that this is a unique service.</p>
+		<p>Nintendo Power is a Japan-exclusive service where someone could buy a flash cartridge and flash games onto it for a fraction of the cost of retail games. While this service was available for the Game Boy as well, this is only covering the Super Famicom half of the service. The service is similar to the Famicom Disk System's Disk Writer Kiosks, as one could purchase a cartridge, flash a game to it, and they would own the game, with one able to purchase the game's manual as well. The service was started in late 1996. The system was formally discontinued in February 2007, when the last remaining kiosks were removed from stores.</p>
 		<h3>Legacy</h3>
-		<p>dummy text</p>
+		<p>The Super NES is fondly remembered with fun RPGs like Chrono Trigger, Secret of Mana and Final Fantasy 6, platformers like Yoshi's Island and Super Mario World, and racing games like Super Mario Kart and F-Zero. It was one of Nintendo's most popular consoles at the time, being accompanied and complimented by the Game Boy.</p>
 		
 		<h3>Console Gallery</h3>
 		<p>The original Super Famicom, SHVC-001, released in November 1990</p>
@@ -75,7 +76,9 @@
 		<p>Super Mario All Stars</p>
 		<img src="images/snes-games/supermarioallstars.png">
 		<p>Super Metroid</p>
-		<img src="images/nes-games/legendofzelda.png">
+		<img src="images/snes-games/supermetroid.png">
+		<p>Star Fox (Int.)/Starwing (Europe & Australia)</p>
+		<img src="images/snes-games/starfox.png">
 		</main>
 
 	<footer> <h5> © 2022 Sandvich Thief. All displayed properties belong to their respective owners.</h5> </footer>
